# cnb-labeler

./: .gitignore  README.md  config.py  pyproject.toml  tasks.py
cnb_labeler/def_graph/: create_graph.py
cnb_labeler/labeler/: clue_sampler.py  labeler.py
cnb_labeler/utils/: get_bridge_edges.py  print_edge.py
labels/1/: test.json
tools/: show_paths.py
