[tool.poetry]
name = "cnb-labeler"
version = "0.1.0"
description = ""
authors = ["Nalu Zou"]
readme = "README.md"
packages = [{include = "cnb_labeler"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.8"
matplotlib = "^3.6.2"

[tool.poetry.scripts]
format                          = "tasks:format"

show-paths                      = "tools.show_paths:main"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
